// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select disabled select has a different style 1`] = `
.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c7 {
  background-color: #FFFFFF;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 34px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8:hover,
.c8:focus {
  background-color: #D9DDE2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
<<<<<<< HEAD
  margin-top: var(--spacing-half);
  outline: none;
=======
  margin-top: var(--spacing-1x);
>>>>>>> Adds CSS variables
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: default;
}

.c3 svg {
  color: #9CA7B4;
}

.c4 {
  background-color: #F1F2F2;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
<<<<<<< HEAD
  outline: none;
=======
>>>>>>> Adds CSS variables
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: default;
}

.c4::-webkit-input-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

<<<<<<< HEAD
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: none;
  position: absolute;
  width: 100%;
}

.c6 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
=======
.c4::placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4:focus {
  outline: none;
}

<<<<<<< HEAD
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
<<<<<<< HEAD
=======
=======
.c5 {
  display: none;
  position: absolute;
>>>>>>> Renames Dropdown to Select
  width: 100%;
>>>>>>> Renames Dropdown to Select
}

<<<<<<< HEAD
.c5 ul {
  border-radius: 0.25rem;
=======
.c4 ul {
  border-radius: var(--border-radius);
>>>>>>> Adds CSS variables
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
>>>>>>> Renames Dropdown to Select
}

<div
  className="c0 c1"
>
<<<<<<< HEAD
  <label
=======
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
>>>>>>> Adds accessibility standards
    className="c2"
  >
    Select an option
  </label>
  <div
<<<<<<< HEAD
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    className="c3"
    disabled={true}
    onClick={[Function]}
    role="combobox"
<<<<<<< HEAD
  >
    <input
<<<<<<< HEAD
      aria-autocomplete="list"
      aria-controls="listbox_undefined"
      aria-multiline="false"
      className="c4"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select an option"
      type="text"
      value=""
    />
    <button
      className="c5"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <svg
        color="currentColor"
        focusable={false}
        height="24"
        width="24"
      />
    </button>
  </div>
  <div
    className="c6"
    open={false}
  >
    <ul
      className="c7"
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <li
        aria-label="Ontario"
        aria-selected={false}
        className="c8"
        id="undefined_on"
=======
    className="c3"
    disabled={true}
  >
    <input
      className="c4"
      disabled={true}
=======
=======
  >
    <input
      aria-controls="listbox_undefined"
>>>>>>> Adds accessibility standards
      className="c3"
      onBlur={[Function]}
>>>>>>> PR changes
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select an option"
      type="text"
      value=""
    />
    <svg
      color="currentColor"
      height="24"
      width="24"
    />
  </div>
  <div
    className="c5"
    open={false}
  >
    <ul
      className="c6"
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <li
        aria-label="Ontario"
        aria-selected={false}
        className="c6"
        id="on_0"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected={false}
        className="c6"
        id="qc_1"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected={false}
        className="c6"
        id="bc_2"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected={false}
        className="c6"
        id="ab_3"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected={false}
        className="c6"
        id="mb_4"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected={false}
        className="c6"
        id="sk_5"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected={false}
<<<<<<< HEAD
        className="c7"
        id=""
=======
        className="c6"
<<<<<<< HEAD
        id="ns-6"
>>>>>>> PR changes
=======
        id="ns_6"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected={false}
        className="c6"
        id="nb_7"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected={false}
        className="c6"
        id="nl_8"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected={false}
        className="c6"
        id="pe_9"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected={false}
        className="c6"
        id="nt_10"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected={false}
        className="c6"
        id="nu_11"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected={false}
        className="c6"
        id="yt_12"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select has no label 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c5 {
  background-color: #fff;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c6 {
  background-color: inherit;
  color: #000;
  cursor: pointer;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 28px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6:hover,
.c6:focus {
  background-color: #d9dde2;
}

.c1 {
  position: relative;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
<<<<<<< HEAD
  border: 1px solid #D9DDE2;
  border-radius: 0.25rem;
=======
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
>>>>>>> Adds CSS variables
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-1x);
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c2:hover {
  cursor: pointer;
}

.c2 svg {
  color: #57666E;
}

.c3 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: calc(1rem - 2px);
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c3:focus {
  outline: none;
}

.c4 {
  display: none;
  position: absolute;
  width: 100%;
}

.c4 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

<div
  className="c0 c1"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    className="c2"
    onClick={[Function]}
    role="combobox"
  >
    <input
      aria-controls="listbox_undefined"
      className="c3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select an option"
      required={true}
      type="text"
      value=""
    />
    <svg
      color="currentColor"
      height="24"
      width="24"
    />
  </div>
  <div
    className="c4"
    open={false}
  >
    <ul
      className="c5"
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <li
        aria-label="Ontario"
        aria-selected={false}
<<<<<<< HEAD
        className="c7"
        id="on"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="on-0"
>>>>>>> PR changes
=======
        id="on_0"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_qc"
=======
        className="c7"
        id="qc"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="qc-1"
>>>>>>> PR changes
=======
        id="qc_1"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_bc"
=======
        className="c7"
        id="bc"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="bc-2"
>>>>>>> PR changes
=======
        id="bc_2"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_ab"
=======
        className="c7"
        id="ab"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="ab-3"
>>>>>>> PR changes
=======
        id="ab_3"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_mb"
=======
        className="c7"
        id="mb"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="mb-4"
>>>>>>> PR changes
=======
        id="mb_4"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_sk"
=======
        className="c7"
        id="sk"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="sk-5"
>>>>>>> PR changes
=======
        id="sk_5"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_ns"
=======
        className="c7"
        id="ns"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="ns-6"
>>>>>>> PR changes
=======
        id="ns_6"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_nb"
=======
        className="c7"
        id="nb"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="nb-7"
>>>>>>> PR changes
=======
        id="nb_7"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_nl"
=======
        className="c7"
        id="nl"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="nl-8"
>>>>>>> PR changes
=======
        id="nl_8"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_pe"
=======
        className="c7"
        id="pe"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="pe-9"
>>>>>>> PR changes
=======
        id="pe_9"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_nt"
=======
        className="c7"
        id="nt"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="nt-10"
>>>>>>> PR changes
=======
        id="nt_10"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_nu"
=======
        className="c7"
        id="nu"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
        id="nu-11"
>>>>>>> PR changes
=======
        className="c6"
        id="nu_11"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected={false}
<<<<<<< HEAD
<<<<<<< HEAD
        className="c8"
        id="undefined_yt"
=======
        className="c7"
        id="yt"
>>>>>>> Renames Dropdown to Select
=======
        className="c6"
<<<<<<< HEAD
        id="yt-12"
>>>>>>> PR changes
=======
        id="yt_12"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

<<<<<<< HEAD
exports[`Select invalid select has a different style 1`] = `
Array [
  .c9 {
  color: #A40C2E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.25rem;
  margin: var(--spacing-half) 0 0;
}

.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
=======
exports[`Select is invalid 1`] = `
Array [
  .c2 {
  color: #000000;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
>>>>>>> Renames Dropdown to Select
  margin: 0;
}

input + .c2 {
<<<<<<< HEAD
<<<<<<< HEAD
  margin-left: var(--spacing-half);
=======
  margin-left: 0.5rem;
=======
  margin-left: var(--spacing-half);
>>>>>>> Adds CSS variables
>>>>>>> Adds CSS variables
}

.c0 {
  margin: 0 0 var(--spacing-3x);
=======
  margin-left: 0.5rem;
}

.c8 {
  color: #A40C2E;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0.25rem 0 0;
}

.c0 {
  margin: 0 0 1.5rem;
>>>>>>> Renames Dropdown to Select
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #A40C2E;
}

.c0:focus {
  border-color: #A40C2E;
}

<<<<<<< HEAD
.c7 {
  background-color: #FFFFFF;
=======
.c6 {
  background-color: #fff;
>>>>>>> Renames Dropdown to Select
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

<<<<<<< HEAD
.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
=======
.c7 {
  background-color: inherit;
  color: #000;
  cursor: pointer;
>>>>>>> Renames Dropdown to Select
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
<<<<<<< HEAD
  padding: 0 34px;
=======
  padding: 0 28px;
>>>>>>> Renames Dropdown to Select
  text-overflow: ellipsis;
  white-space: nowrap;
}

<<<<<<< HEAD
.c8:hover,
.c8:focus {
  background-color: #D9DDE2;
=======
.c7:hover,
.c7:focus {
  background-color: #d9dde2;
>>>>>>> Renames Dropdown to Select
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
<<<<<<< HEAD
  background-color: #FFFFFF;
  border: 1px solid #A40C2E;
<<<<<<< HEAD
  border-radius: var(--border-radius);
=======
  border-radius: 0.25rem;
>>>>>>> Renames Dropdown to Select
=======
  background-color: #F1F2F2;
<<<<<<< HEAD
  border: 1px solid #D9DDE2;
  border-radius: 0.25rem;
=======
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
>>>>>>> Adds CSS variables
>>>>>>> Adds CSS variables
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
<<<<<<< HEAD
<<<<<<< HEAD
  margin-top: var(--spacing-half);
  outline: none;
  padding-right: var(--spacing-1x);
=======
  margin-top: 8px;
<<<<<<< HEAD
  padding: 0.5rem;
>>>>>>> Renames Dropdown to Select
=======
  border: 1px solid #D9DDE2;
  padding-right: 0.5rem;
>>>>>>> PR changes
=======
  margin-top: var(--spacing-1x);
  border: 1px solid #D9DDE2;
  padding-right: var(--spacing-1x);
>>>>>>> Adds CSS variables
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3 svg {
  color: #57666E;
}

.c4 {
  background-color: #FFFFFF;
  border: none;
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
=======
=======
  border-radius: 0.25rem;
=======
  border-radius: var(--border-radius);
>>>>>>> Adds CSS variables
  box-sizing: border-box;
  caret-color: transparent;
>>>>>>> PR changes
  font-size: calc(1rem - 2px);
>>>>>>> Renames Dropdown to Select
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
<<<<<<< HEAD
<<<<<<< HEAD
  max-height: 100%;
  outline: none;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
=======
>>>>>>> Renames Dropdown to Select
=======
  max-height: 100%;
<<<<<<< HEAD
  padding: 0.5rem 0 0.5rem 0.5rem;
>>>>>>> PR changes
=======
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
>>>>>>> Adds CSS variables
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

<<<<<<< HEAD
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
=======
.c4:focus {
  outline: none;
}

<<<<<<< HEAD
<<<<<<< HEAD
=======
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
>>>>>>> PR changes
=======
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
=======
<<<<<<< HEAD
<<<<<<< HEAD
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
<<<<<<< HEAD
=======
=======
=======
>>>>>>> Adds CSS variables
>>>>>>> Adds CSS variables
>>>>>>> Adds CSS variables
.c5 {
>>>>>>> Renames Dropdown to Select
  display: none;
  position: absolute;
  width: 100%;
}

<<<<<<< HEAD
.c6 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
=======
.c5 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
>>>>>>> Renames Dropdown to Select
}

<div
<<<<<<< HEAD
    className="c0 c1"
=======
  className="c0 c1"
>
  <label
    className="c2"
  >
    Select an option
  </label>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    className="c3"
    disabled={true}
    role="combobox"
  >
    <input
      aria-controls="listbox_undefined"
      className="c4"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select an option"
      required={true}
      type="text"
      value=""
    />
    <svg
      color="currentColor"
      height="24"
      width="24"
    />
  </div>
  <div
    className="c5"
    open={false}
>>>>>>> PR changes
  >
    <label
      className="c2"
    >
<<<<<<< HEAD
      Select an option
    </label>
    <div
<<<<<<< HEAD
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
      className="c3"
      onClick={[Function]}
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_undefined"
        aria-multiline="false"
        className="c4"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an option"
        type="text"
        value=""
      />
      <button
        className="c5"
=======
      <li
        aria-label="Ontario"
        aria-selected={false}
        className="c7"
<<<<<<< HEAD
        id="on-0"
>>>>>>> PR changes
=======
        id="on_0"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        tabIndex={-1}
        type="button"
      >
        <svg
          color="currentColor"
          focusable={false}
          height="24"
          width="24"
        />
      </button>
    </div>
    <div
      className="c6"
      open={false}
    >
      <ul
        className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
        id="qc-1"
=======
        id="qc_1"
>>>>>>> Adds accessibility standards
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected={false}
        className="c7"
        id="bc_2"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected={false}
        className="c7"
        id="ab_3"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected={false}
        className="c7"
        id="mb_4"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected={false}
        className="c7"
        id="sk_5"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected={false}
        className="c7"
        id="ns_6"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected={false}
        className="c7"
        id="nb_7"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected={false}
        className="c7"
        id="nl_8"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected={false}
        className="c7"
        id="pe_9"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected={false}
        className="c7"
        id="nt_10"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected={false}
        className="c7"
        id="nu_11"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected={false}
        className="c7"
        id="yt_12"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select is invalid 1`] = `
Array [
  .c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c8 {
  color: #A40C2E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.25rem;
  margin: var(--spacing-half) 0 0;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #A40C2E;
}

.c0:focus {
  border-color: #A40C2E;
}

.c6 {
  background-color: #fff;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c7 {
  background-color: inherit;
  color: #000;
  cursor: pointer;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 28px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:hover,
.c7:focus {
  background-color: #d9dde2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
<<<<<<< HEAD
  border: 1px solid #57666E;
=======
  border: 1px solid #A40C2E;
>>>>>>> Update handleBlur function
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-half);
  outline: none;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3 svg {
  color: #57666E;
}

.c4 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  outline: none;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: none;
  position: absolute;
  width: 100%;
}

.c6 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
}

<div
    className="c0 c1"
  >
    <label
      className="c2"
    >
      Select an option
    </label>
    <div
<<<<<<< HEAD
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
      className="c3"
exports[`Select is disabled 1`] = `
.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c7 {
  background-color: #FFFFFF;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 34px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:hover,
.c7:focus {
  background-color: #D9DDE2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
=======
<<<<<<< HEAD
>>>>>>> PR changes
=======
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
>>>>>>> Adds accessibility standards
      className="c3"
      onClick={[Function]}
      role="combobox"
    >
      <input
        aria-controls="listbox_undefined"
        className="c4"
>>>>>>> Adds accessibility standards
<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
  border: 1px solid #D9DDE2;
  border-radius: 0.25rem;
=======
>>>>>>> Adds scroll position reset after selection
  border: 1px solid #57666E;
=======
  border: 1px solid #D9DDE2;
>>>>>>> Adds scroll position reset after selection
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-half);
  outline: none;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: default;
}

.c3 svg {
  color: #9CA7B4;
}

.c4 {
  background-color: #F1F2F2;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  outline: none;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: default;
}

.c4::-webkit-input-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

<<<<<<< HEAD
.c2:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px rgba(0,128,165,0.4);
=======
<<<<<<< HEAD
.c4:focus {
  outline: none;
>>>>>>> Adds more keyboard functionalities
}

<<<<<<< HEAD
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
=======
<<<<<<< HEAD
<<<<<<< HEAD
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
<<<<<<< HEAD
=======
=======
=======
>>>>>>> Adds CSS variables
<<<<<<< HEAD
>>>>>>> Adds CSS variables
=======
=======
>>>>>>> Adds more keyboard functionalities
>>>>>>> Adds more keyboard functionalities
.c5 {
  display: none;
  position: absolute;
  width: 100%;
>>>>>>> Renames Dropdown to Select
}

.c5 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
}

<div
  className="c0 c1"
>
  <label
    className="c2"
  >
    Select an option
  </label>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    className="c3"
    disabled={true}
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_undefined"
      aria-multiline="false"
      className="c4"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select an option"
      required={true}
      type="text"
      value=""
    />
    <svg
      color="currentColor"
      focusable={false}
      height="24"
      width="24"
    />
  </div>
  <div
    className="c5"
    open={false}
  >
    <ul
      className="c6"
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <li
        aria-label="Ontario"
        aria-selected={false}
        className="c7"
        id="undefined_on"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected={false}
        className="c7"
        id="undefined_qc"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected={false}
        className="c7"
        id="undefined_bc"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected={false}
        className="c7"
        id="undefined_ab"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected={false}
        className="c7"
        id="undefined_mb"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected={false}
        className="c7"
        id="undefined_sk"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected={false}
        className="c7"
        id="undefined_ns"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected={false}
        className="c7"
        id="undefined_nb"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected={false}
        className="c7"
        id="undefined_nl"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected={false}
        className="c7"
        id="undefined_pe"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected={false}
        className="c7"
        id="undefined_nt"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected={false}
        className="c7"
        id="undefined_nu"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected={false}
        className="c7"
        id="undefined_yt"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select is invalid 1`] = `
Array [
  .c8 {
  color: #A40C2E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.25rem;
  margin: var(--spacing-half) 0 0;
}

.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #A40C2E;
}

.c0:focus {
  border-color: #A40C2E;
}

.c6 {
  background-color: #FFFFFF;
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 34px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8:hover,
.c8:focus {
  background-color: #D9DDE2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #A40C2E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-1x);
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3 svg {
  color: #57666E;
}

.c4 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: calc(1rem - 2px);
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:focus {
  outline: none;
}

.c5 {
  display: none;
  position: absolute;
  width: 100%;
}

.c5 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

<div
    className="c0 c1"
  >
    <label
      className="c2"
    >
      Select an option
    </label>
    <div
>>>>>>> PR changes
      className="c3"
=======
>>>>>>> Update handleBlur function
      onClick={[Function]}
    >
      <input
        className="c4"
<<<<<<< HEAD
        onChange={[Function]}
=======
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
>>>>>>> PR changes
        onKeyDown={[Function]}
        placeholder="Select an option"
        required={true}
        type="text"
        value=""
      />
      <svg
        color="currentColor"
        height="24"
        width="24"
      />
    </div>
    <div
      className="c5"
      open={false}
    >
      <ul
        className="c6"
<<<<<<< HEAD
>>>>>>> Renames Dropdown to Select
=======
>>>>>>> PR changes
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <li
<<<<<<< HEAD
<<<<<<< HEAD
          aria-label="Ontario"
          aria-selected={false}
          className="c8"
          id="undefined_on"
=======
          aria-label="-"
          aria-selected={false}
          className="c7"
          id=""
          onClick={[Function]}
          role="option"
          selected={false}
        >
          -
        </li>
        <li
          aria-label="Ontario"
          aria-selected={false}
          className="c7"
          id="on"
>>>>>>> Renames Dropdown to Select
=======
          aria-label="Ontario"
          aria-selected={false}
          className="c7"
<<<<<<< HEAD
          id="on-0"
>>>>>>> PR changes
=======
          id="on_0"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Ontario
        </li>
        <li
          aria-label="Quebec"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_qc"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="qc"
>>>>>>> Renames Dropdown to Select
=======
          id="qc-1"
>>>>>>> PR changes
=======
          id="qc_1"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Quebec
        </li>
        <li
          aria-label="British Columbia"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_bc"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="bc"
>>>>>>> Renames Dropdown to Select
=======
          id="bc-2"
>>>>>>> PR changes
=======
          id="bc_2"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          British Columbia
        </li>
        <li
          aria-label="Alberta"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_ab"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="ab"
>>>>>>> Renames Dropdown to Select
=======
          id="ab-3"
>>>>>>> PR changes
=======
          id="ab_3"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Alberta
        </li>
        <li
          aria-label="Manitoba"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_mb"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="mb"
>>>>>>> Renames Dropdown to Select
=======
          id="mb-4"
>>>>>>> PR changes
=======
          id="mb_4"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Manitoba
        </li>
        <li
          aria-label="Saskatchewan"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_sk"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="sk"
>>>>>>> Renames Dropdown to Select
=======
          id="sk-5"
>>>>>>> PR changes
=======
          id="sk_5"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Saskatchewan
        </li>
        <li
          aria-label="Nova Scotia"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_ns"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="ns"
>>>>>>> Renames Dropdown to Select
=======
          id="ns-6"
>>>>>>> PR changes
=======
          id="ns_6"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Nova Scotia
        </li>
        <li
          aria-label="New Brunswick"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_nb"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="nb"
>>>>>>> Renames Dropdown to Select
=======
          id="nb-7"
>>>>>>> PR changes
=======
          id="nb_7"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          New Brunswick
        </li>
        <li
          aria-label="Newfoundland and Labrador"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_nl"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="nl"
>>>>>>> Renames Dropdown to Select
=======
          id="nl-8"
>>>>>>> PR changes
=======
          id="nl_8"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-label="Prince Edward Island"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_pe"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="pe"
>>>>>>> Renames Dropdown to Select
=======
          id="pe-9"
>>>>>>> PR changes
=======
          id="pe_9"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Prince Edward Island
        </li>
        <li
          aria-label="Northwest Territories"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_nt"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="nt"
>>>>>>> Renames Dropdown to Select
=======
          id="nt-10"
>>>>>>> PR changes
=======
          id="nt_10"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Northwest Territories
        </li>
        <li
          aria-label="Nunavut"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_nu"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="nu"
>>>>>>> Renames Dropdown to Select
=======
          id="nu-11"
>>>>>>> PR changes
=======
          id="nu_11"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Nunavut
        </li>
        <li
          aria-label="Yukon"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_yt"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="yt"
>>>>>>> Renames Dropdown to Select
=======
          id="yt-12"
>>>>>>> PR changes
=======
          id="yt_12"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Yukon
        </li>
      </ul>
    </div>
    <div
      aria-live="polite"
<<<<<<< HEAD
      className="c9"
=======
      className="c8"
>>>>>>> Renames Dropdown to Select
      id="undefined_invalid"
      role="alert"
    >
      You must select an option
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    checked={false}
    className="c0"
    name="undefined_skip"
    onChange={[Function]}
    type="radio"
    value="skip"
  />,
  .c0 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  border-color: #0080A5;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    className="c0"
  >
    Skip this question
  </label>,
]
`;

exports[`Select matches the snapshot 1`] = `
Array [
  .c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

<<<<<<< HEAD
<<<<<<< HEAD
input + .c2 {
=======
<<<<<<< HEAD
input + .c1 {
>>>>>>> Renames Dropdown to Select
  margin-left: var(--spacing-half);
=======
=======
>>>>>>> Adds CSS variables
input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

<<<<<<< HEAD
.c6 {
=======
<<<<<<< HEAD
.c7 {
>>>>>>> Renames Dropdown to Select
  background-color: #FFFFFF;
=======
.c6 {
  background-color: #fff;
>>>>>>> Renames Dropdown to Select
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

<<<<<<< HEAD
.c7 {
=======
<<<<<<< HEAD
.c8 {
=======
.c7 {
  background-color: inherit;
  color: #000;
  cursor: pointer;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 28px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:hover,
.c7:focus {
  background-color: #d9dde2;
}

.c1 {
  position: relative;
}

.c3 {
>>>>>>> Renames Dropdown to Select
>>>>>>> Renames Dropdown to Select
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
<<<<<<< HEAD
  background-color: inherit;
=======
  background-color: #FFFFFF;
<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> Adds CSS variables
  border: 1px solid #D9DDE2;
<<<<<<< HEAD
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
>>>>>>> Renames Dropdown to Select
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 34px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:hover,
.c7:focus {
  background-color: #D9DDE2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-half);
  outline: none;
  padding-right: var(--spacing-1x);
  width: 100%;
<<<<<<< HEAD
=======
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
  background-position: right 0.75rem center;
  background-repeat: no-repeat;
  background-size: 0.75rem;
  position: relative;
=======
<<<<<<< HEAD
  border-radius: 0.25rem;
=======
=======
=======
>>>>>>> Adds CSS variables
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
>>>>>>> Adds CSS variables
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-1x);
  padding-right: var(--spacing-1x);
  width: 100%;
<<<<<<< HEAD
>>>>>>> Renames Dropdown to Select
>>>>>>> Renames Dropdown to Select
=======
>>>>>>> Adds CSS variables
}

.c3:hover {
  cursor: pointer;
}

.c3 svg {
  color: #57666E;
}

.c4 {
  background-color: #FFFFFF;
  border: none;
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
=======
=======
  border-radius: 0.25rem;
=======
  border-radius: var(--border-radius);
>>>>>>> Adds CSS variables
  box-sizing: border-box;
  caret-color: transparent;
>>>>>>> PR changes
  font-size: calc(1rem - 2px);
>>>>>>> Renames Dropdown to Select
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
<<<<<<< HEAD
<<<<<<< HEAD
  max-height: 100%;
  outline: none;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
=======
>>>>>>> Renames Dropdown to Select
=======
  max-height: 100%;
<<<<<<< HEAD
  padding: 0.5rem 0 0.5rem 0.5rem;
>>>>>>> PR changes
=======
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
>>>>>>> Adds CSS variables
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

<<<<<<< HEAD
<<<<<<< HEAD
.c4:focus {
  outline: none;
}

<<<<<<< HEAD
.c2:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px rgba(0,128,165,0.4);
=======
=======
>>>>>>> Adds more keyboard functionalities
.c5 {
=======
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
=======
.c4:focus {
  outline: none;
}

.c5 {
>>>>>>> Renames Dropdown to Select
>>>>>>> Renames Dropdown to Select
  display: none;
  position: absolute;
  width: 100%;
>>>>>>> Renames Dropdown to Select
}

<<<<<<< HEAD
<<<<<<< HEAD
.c5 ul {
=======
=======
>>>>>>> Adds CSS variables
<<<<<<< HEAD
.c6 ul {
>>>>>>> Renames Dropdown to Select
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
=======
=======
>>>>>>> Adds CSS variables
<<<<<<< HEAD
label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
<<<<<<< HEAD
=======
  width: 100%;
=======
=======
>>>>>>> Adds CSS variables
.c5 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
<<<<<<< HEAD
>>>>>>> Renames Dropdown to Select
>>>>>>> Renames Dropdown to Select
<<<<<<< HEAD
>>>>>>> Renames Dropdown to Select
=======
=======
>>>>>>> Adds CSS variables
>>>>>>> Adds CSS variables
}

<div
    className="c0 c1"
  >
    <label
      className="c2"
    >
      Select an option
    </label>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
      className="c3"
      onClick={[Function]}
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_undefined"
        aria-multiline="false"
        className="c4"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an option"
        type="text"
        value=""
      />
      <button
        className="c5"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
      >
        <svg
          color="currentColor"
          focusable={false}
          height="24"
          width="24"
        />
      </button>
    </div>
    <div
      className="c6"
      open={false}
    >
      <ul
        className="c7"
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <li
          aria-label="Ontario"
          aria-selected={false}
          className="c8"
          id="undefined_on"
=======
=======
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
>>>>>>> Adds accessibility standards
      className="c3"
      onClick={[Function]}
      role="combobox"
    >
      <input
        aria-controls="listbox_undefined"
        className="c4"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an option"
        required={true}
        type="text"
        value=""
      />
      <svg
        color="currentColor"
        height="24"
        width="24"
      />
    </div>
    <div
      className="c5"
      open={false}
    >
      <ul
        className="c6"
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <li
          aria-label="Ontario"
          aria-selected={false}
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="on"
>>>>>>> Renames Dropdown to Select
=======
          id="on-0"
>>>>>>> PR changes
=======
          id="on_0"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Ontario
        </li>
        <li
          aria-label="Quebec"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_qc"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="qc"
>>>>>>> Renames Dropdown to Select
=======
          id="qc-1"
>>>>>>> PR changes
=======
          id="qc_1"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Quebec
        </li>
        <li
          aria-label="British Columbia"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_bc"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="bc"
>>>>>>> Renames Dropdown to Select
=======
          id="bc-2"
>>>>>>> PR changes
=======
          id="bc_2"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          British Columbia
        </li>
        <li
          aria-label="Alberta"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_ab"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="ab"
>>>>>>> Renames Dropdown to Select
=======
          id="ab-3"
>>>>>>> PR changes
=======
          id="ab_3"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Alberta
        </li>
        <li
          aria-label="Manitoba"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_mb"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="mb"
>>>>>>> Renames Dropdown to Select
=======
          id="mb-4"
>>>>>>> PR changes
=======
          id="mb_4"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Manitoba
        </li>
        <li
          aria-label="Saskatchewan"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_sk"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="sk"
>>>>>>> Renames Dropdown to Select
=======
          id="sk-5"
>>>>>>> PR changes
=======
          id="sk_5"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Saskatchewan
        </li>
        <li
          aria-label="Nova Scotia"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_ns"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="ns"
>>>>>>> Renames Dropdown to Select
=======
          id="ns-6"
>>>>>>> PR changes
=======
          id="ns_6"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Nova Scotia
        </li>
        <li
          aria-label="New Brunswick"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_nb"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="nb"
>>>>>>> Renames Dropdown to Select
=======
          id="nb-7"
>>>>>>> PR changes
=======
          id="nb_7"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          New Brunswick
        </li>
        <li
          aria-label="Newfoundland and Labrador"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_nl"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="nl"
>>>>>>> Renames Dropdown to Select
=======
          id="nl-8"
>>>>>>> PR changes
=======
          id="nl_8"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-label="Prince Edward Island"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_pe"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="pe"
>>>>>>> Renames Dropdown to Select
=======
          id="pe-9"
>>>>>>> PR changes
=======
          id="pe_9"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Prince Edward Island
        </li>
        <li
          aria-label="Northwest Territories"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_nt"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="nt"
>>>>>>> Renames Dropdown to Select
=======
          id="nt-10"
>>>>>>> PR changes
=======
          id="nt_10"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Northwest Territories
        </li>
        <li
          aria-label="Nunavut"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_nu"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="nu"
>>>>>>> Renames Dropdown to Select
=======
          id="nu-11"
>>>>>>> PR changes
=======
          id="nu_11"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Nunavut
        </li>
        <li
          aria-label="Yukon"
          aria-selected={false}
<<<<<<< HEAD
          className="c8"
          id="undefined_yt"
=======
          className="c7"
<<<<<<< HEAD
<<<<<<< HEAD
          id="yt"
>>>>>>> Renames Dropdown to Select
=======
          id="yt-12"
>>>>>>> PR changes
=======
          id="yt_12"
>>>>>>> Adds accessibility standards
          onClick={[Function]}
          role="option"
          selected={false}
        >
          Yukon
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    checked={false}
    className="c0"
    name="undefined_skip"
    onChange={[Function]}
    type="radio"
    value="skip"
  />,
  .c0 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  border-color: #0080A5;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    className="c0"
  >
    Skip this question
  </label>,
]
`;

exports[`Select mobile select has a different style 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c6 {
  background-color: #FFFFFF;
  list-style-type: none;
  margin: 0;
  max-height: 160px;
  min-width: 200px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 40px;
  line-height: 40px;
  overflow: hidden;
  padding: 0 40px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:hover,
.c7:focus {
  background-color: #D9DDE2;
}

.c1 {
  position: relative;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: var(--spacing-half);
  outline: none;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c2:hover {
  cursor: pointer;
}

.c2 svg {
  color: #57666E;
}

.c3 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 1rem;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  outline: none;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #57666E;
  font-size: 1rem;
}

.c3::-moz-placeholder {
  color: #57666E;
  font-size: 1rem;
}

.c3:-ms-input-placeholder {
  color: #57666E;
  font-size: 1rem;
}

.c3::placeholder {
  color: #57666E;
  font-size: 1rem;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: none;
  position: absolute;
  width: 100%;
}

.c5 ul {
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
}

<div
  className="c0 c1"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    className="c2"
    onClick={[Function]}
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_undefined"
      aria-multiline="false"
      className="c3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select an option"
      type="text"
      value=""
    />
    <button
      className="c4"
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <svg
        color="currentColor"
        focusable={false}
        height="32"
        width="32"
      />
    </button>
  </div>
  <div
    className="c5"
    open={false}
  >
    <ul
      className="c6"
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <li
        aria-label="Ontario"
        aria-selected={false}
        className="c7"
        id="undefined_on"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected={false}
        className="c7"
        id="undefined_qc"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected={false}
        className="c7"
        id="undefined_bc"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected={false}
        className="c7"
        id="undefined_ab"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected={false}
        className="c7"
        id="undefined_mb"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected={false}
        className="c7"
        id="undefined_sk"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected={false}
        className="c7"
        id="undefined_ns"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected={false}
        className="c7"
        id="undefined_nb"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected={false}
        className="c7"
        id="undefined_nl"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected={false}
        className="c7"
        id="undefined_pe"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected={false}
        className="c7"
        id="undefined_nt"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected={false}
        className="c7"
        id="undefined_nu"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected={false}
        className="c7"
        id="undefined_yt"
        onClick={[Function]}
        role="option"
        selected={false}
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;
